# Tiralabra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  sanasto.csv  sanasto_test.csv  tasks.py
.github/workflows/: main.yml
.hypothesis/examples/92fcf1eb76cc7878/: 94173354632a7b19
.hypothesis/examples/bd6b976fea944db2/: 6d99a281304db7d1
docs/: kayttoohje.md  maarittelydokumentti.md  testausraportti.md  toteutusdokumentti.md  toteutusraportti.md
docs/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti3.md.backup  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
dokumentaatio/: maarittelydokumentti.md
src/: app.py
src/data/: sanasto.txt
src/services/: damerau_levenshtein.py  trie.py  vocabulary_service.py
src/static/css/: style.css
src/templates/: correction.html  index.html  layout.html  message.html  result.html
src/tests/: damerau_levenshtein_test.py  trie_test.py  vocabulary_service_test.py
