[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Olivia Brotherus <olivia@brotherus.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
pytest = "^7.4.4"
pylint = "^3.0.3"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
